# makeutil

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  typos.local.toml  typos.toml
.cargo/: config.toml
.github/workflows/: act-validation.yml  ci.yml  release.yml
data/: typos-oxendict-base.toml
docs/: contents.md  design.md  developers-guide.md  documentation-style-guide.md  ortho-config-users-guide.md  polonius.md  repository-layout.md  rstest-bdd-users-guide.md  terms-of-reference.md  users-guide.md
docs/adrs/: 0001-single-file-gnu-make-parse.md
docs/execplans/: adr-0001-single-file-gnu-make-parse.md
schemas/: makeutil.parse.v1.schema.json
scripts/: generate_typos_config.py  typos_rollout.py
src/: application.rs  lib.rs  main.rs  ports.rs
src/adapters/: cli.rs  makefile.rs  makefile_tests.rs  mod.rs  source.rs
src/domain/: location.rs  mod.rs
tests/: cli_e2e.rs  corpus.rs  domain_contract.rs  output_failures.rs  parse_bdd.rs  report_schema.rs  source_adapter.rs
tests/common/: failing_reader.rs  mod.rs
tests/features/: parse.feature
tests/fixtures/makefiles/: all-facts.mk  conditional-error-directive.mk  multiline-define.mk  recovered.mk
tests/snapshots/: report_schema__all_fact_variants_have_stable_json.snap  report_schema__recovered_output_has_stable_json.snap
