[package]
name = "makeutil"
version = "0.1.0"
edition = "2024"
description = "Tools for managing Makefiles"
license = "ISC"
repository = "https://github.com/leynos/makeutil"
homepage = "https://github.com/leynos/makeutil"
readme = "README.md"
keywords = ["make", "gnumake", "makefile", "cst", "roundtrip"]
categories = ["development-tools"]

[features]
default = ["serde_json"]
serde_json = ["ortho_config/serde_json"]

[dependencies]
camino = "1.2.4"
cap-std = { version = "4.0.2", features = ["fs_utf8"] }
clap = { version = "4.5.54", features = ["derive"] }
data-encoding = "2.10.0"
makefile-lossless = "=0.3.40"
ortho_config = { version = "0.8.0", default-features = false, features = ["toml"] }
rowan = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"

[patch.crates-io]
makefile-lossless = { git = "https://github.com/leynos/makefile-lossless.git", rev = "8dd35801b75b332c2ac2f995ae398ef8238559fa" }

[dev-dependencies]
assert_cmd = "2.2.2"
googletest = "0.14.3"
insta = { version = "1.48.0", features = ["json"] }
jsonschema = { version = "0.47.0", default-features = false }
mockall = "0.13.1"
pretty_assertions = "1.4.1"
proptest = "1.11.0"
rstest = "0.26.1"
rstest-bdd = "0.6.0-beta3"
rstest-bdd-macros = "0.6.0-beta3"
tempfile = "3.27.0"

# The package.metadata.binstall pkg-url intentionally mixes Jinja2 values
# rendered at project generation with single-brace cargo-binstall variables
# substituted at install time.
[package.metadata.binstall]
pkg-url = "https://github.com/leynos/makeutil/releases/download/v{ version }/makeutil-{ target }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
